testsuite/poke.pkl/load-diag-1.pk
/* { dg-do compile } */

var foo = 10;
load ___foobar___; /* { dg-error "" } */
var bar = 20;
